# face-authentication

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  router.py  user.py
backend/app/core/: config.py  exceptions.py  redis.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  admin_action.py  auth_log.py  face_embedding.py  refresh_token.py  user.py
backend/app/schemas/: admin.py  auth.py  common.py  face.py  user.py
backend/app/services/: email_service.py  face_service.py  storage_service.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AuthLayout.tsx  FaceOverlay.tsx  LivenessChallenge.tsx  ProtectedRoute.tsx  WebcamCapture.tsx
frontend/src/hooks/: useAuth.ts  useLiveness.ts  useWebcam.ts
frontend/src/pages/: AdminPage.tsx  DashboardPage.tsx  LoginPage.tsx  OTPFallbackPage.tsx  RegisterPage.tsx
frontend/src/store/: authStore.ts
frontend/src/utils/: constants.ts  faceDetection.ts
