[project]
name = "face-authentication"
version = "0.1.0"
description = "Face Authentication System API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "gunicorn>=23.0.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "pgvector>=0.3.2",
    "pydantic-settings>=2.5.2",
    "pyjwt>=2.9.0",
    "pwdlib[argon2]>=0.2.1",
    "python-multipart>=0.0.10",
    "redis>=5.0.8",
    "slowapi>=0.1.9",
    "minio>=7.2.9",
    "deepface>=0.0.93",
    "tf-keras>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "mypy>=1.11.2",
    "ruff>=0.6.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
